2010-08-31  Gary V. Vaughan  <gary@gnu.org>

	build: don't hardcode repeated long paths in Makefile rules.
	According to the DRY principle, scattering several copies of
	something across a file or project leads to pain.  Let's not
	do that!
	* Makefile.am (Makefile_in, Makefile_inc, defs_in, defs_m4sh),
	(libtoolize_in, ltmain_m4sh, ltversion_in): New variables to
	hold the location of important files and targets.
	(EXTRA_DIST): Add the distributed ones by variable.
	(libtoolize, libltdl/Makefile.am, libltdl/m4/ltversion.m4)
	(libltdl/config/ltmain.sh, libltdl/stamp-mk, tests/defs)
	(tests/defs.in): Use the new variables to reduce noise and
	repetition.

	build: make better use of automatic variables in `Makefile.am'.
	* Makefile.am (libtoolize, libtoolize.in, libltdl/Makefile.am)
	(libltdl/config/mkstamp, libltdl/config/ltmain.m4sh)
	(libltdl/m4/ltversion.m4, tests/testsuite, tests/defs.in):
	Make better use of automatic variables.

	build: name temporary files in `Makefile.am' consistently.
	Sadly, we still have to jump through hoops for MICROS~1's very
	old, very broken 8.3 naming convention, so we have to be careful
	to be unique in the first 8 letters, and not to use two periods
	in a filename, otherwise we could use the much more elegent
	`temporary files use "$@T"' idiom:
	* Makefile.am (libltdl/m4/ltversion.m4): Rename temporary file
	to `ltversion.tmp'.
	(libltdl/config/ltmain.sh): Rename temporary file to
	`libltdl/config/ltmain.tmp'.
	(libtoolize): Rename temporary file to `libtoolize.tmp'.
	(tests/defs): Rename temporary file to `tests/defs.tmp'
	(tests/testsuite): Rename temporary file to `tests/testsuite.tmp'.
	(CLEANFILES): Append temporary files as we create rules that
	use them.

	build: factor Makefile.am `m4sh' invocations to LT_M4SH.
	* Makefile.am (LT_M4SH): Now that all directories are listed as
	fully qualified paths, the search path argument to M4SH is always
	the same, so factor it out into a variable.  Adjust all callers.
